--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Contributer | Google Crowdsource</h4>
+              <h4>Influencer | Google Crowdsource</h4>
               <h5>2019 - Present</h5>
               <p><em>Google initiative</em></p>
               <ul>
