--- a/index.html
+++ b/index.html
@@ -229,6 +229,15 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>Co-founder | CobbleApps</h4>
+              <h5>2021 </h5>
+              <p><em>Google Playstore Apps </em></p>
+              <ul>
+                <li>Evaluated the value chain of chemical industry and the major impacts of raw material cost on the industry.</li>
+                <li>Analyzed automobile industry and did financial modeling for Suprajit Engineering.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>Influencer | Google Crowdsource</h4>
               <h5>2019 - Present</h5>
               <p><em>Google initiative</em></p>
