--- a/index.html
+++ b/index.html
@@ -233,8 +233,9 @@
               <h5>2021 </h5>
               <p><em>Google Playstore Apps </em></p>
               <ul>
-                <li>Evaluated the value chain of chemical industry and the major impacts of raw material cost on the industry.</li>
-                <li>Analyzed automobile industry and did financial modeling for Suprajit Engineering.</li>
+                <li>Solved the parking problems via "Cobble RWA" app.</li>
+                <li>Succefull completion of "Cobble I-ching" app. A perfect solution to predict your future with a trusted ancient technique I-ching</li>
+                <li>Mind behined the "Stract- Fun Stickers for signal and whatsapp".</li>
               </ul>
             </div>
             <div class="resume-item">
