--- a/index.html
+++ b/index.html
@@ -230,12 +230,12 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Co-founder | CobbleApps</h4>
-              <h5>2021 </h5>
+              <h5>2021 - Present </h5>
               <p><em>Google Playstore Apps </em></p>
               <ul>
                 <li>Solved the parking problems via "Cobble RWA" app.</li>
                 <li>Succefull completion of "Cobble I-ching" app. A perfect solution to predict your future with a trusted ancient technique I-ching</li>
-                <li>Mind behined the "Stract- Fun Stickers for signal and whatsapp".</li>
+                <li>Mind behind the "Stract- Fun Stickers for signal and whatsapp".</li>
               </ul>
             </div>
             <div class="resume-item">
