--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <img src="assets/img/Rishabh.jpeg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Rishabh Gupta</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://twitter.com/ted_brosby" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://twitter.com/riraremon" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/rishabhg17" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://www.instagram.com/rishabh007.5/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.instagram.com/riraremon/" class="instagram"><i class="bx bxl-instagram"></i></a>
           
           <a href="https://www.linkedin.com/in/rishabhg17/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
