--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       <div class="profile">
         <img src="assets/img/Rishabh.jpeg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Rishabh Gupta</a></h1>
+        <h1 class="text-light"><a href="index.html">Rishabh Gupta <br> (Riraremon)</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/riraremon" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/rishabhg17" class="facebook"><i class="bx bxl-facebook"></i></a>
