--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       <div class="profile">
         <img src="assets/img/Rishabh.jpeg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Rishabh Gupta <br> (Riraremon)</a></h1>
+        <h1 class="text-light"><a href="index.html">Rishabh Gupta</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/riraremon" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/rishabhg17" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -84,7 +84,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am a final year student at NSIT pursuing my Bachelors in Engineering with a major in Instrumentation & Control. With a strong academic record, to back me up I developed the skills required for my projects, by exposing myself to different Projects, Internships and Extra Curricular Activities.I believe that life should be an upside-down T where one should be a jack of all traits but master a few. </p>
+          <p>I am an NSITian, I have completed my Bachelors in Engineering with a major in Instrumentation & Control. With a strong academic record, to back me up I developed the skills required for my projects, by exposing myself to different Projects, Internships and Extra Curricular Activities.I believe that life should be an upside-down T where one should be a jack of all traits but master a few. </p>
         </div>
 
         <div class="row">
