--- a/index.html
+++ b/index.html
@@ -214,6 +214,12 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
+              <h4>CFA Level II Candidate</h4>
+              <h5>2021</h5>
+              <p><em>CFA Institute</em></p>
+              <p>Chartered Financial Analyst® (CFA®) charterholders apply their knowledge and skills in a wide range of positions throughout the global finance industry. Distinguished by their commitment to set a higher standard of excellence, they are sought after as investment management professionals.</p>
+            </div>
+            <div class="resume-item">
               <h4>B.E., Instrumentation and Control Engineering</h4>
               <h5>2017 - 2021</h5>
               <p><em>Netaji Subhas Institute of Technology</em></p>
