--- a/index.html
+++ b/index.html
@@ -242,11 +242,21 @@
                 <li>Solved the parking problems via "Cobble RWA" app.</li>
                 <li>Succefull completion of "Cobble I-ching" app. A perfect solution to predict your future with a trusted ancient technique I-ching</li>
                 <li>Mind behind the "Stract- Fun Stickers for signal and whatsapp".</li>
+                <li>Building best ever Ai based money mamanger</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>EXL</h4>
+              <h5>2021-2022</h5>
+              <p><em>Gurugram </em></p>
+              <ul>
+                <li>Created insights on fraud rate for the insurance domain of the client using Pivot Tables and Python/li>
+                <li>Predicted whether a customer will default on his loan using supervised learning</li>
               </ul>
             </div>
             <div class="resume-item">
               <h4>Influencer | Google Crowdsource</h4>
-              <h5>2019 - Present</h5>
+              <h5>2019 -2021</h5>
               <p><em>Google initiative</em></p>
               <ul>
                 <li>Crowdsource, is a crowdsourcing platform developed by Google intended to improve a host of Google services through the user-facing training of different algorithms.</li>
