--- a/index.html
+++ b/index.html
@@ -246,7 +246,16 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>EXL</h4>
+              <h4>Analyst | Bain & Co.</h4>
+              <h5>2022 - Present</h5>
+              <p><em>Gurugram </em></p>
+              <ul>
+                <li>Visualized Spend Visibility under ZBB for Food Co along with dashboard development for entire spend</li>
+                <li> Saving analysis and Lever Identification to support savings post ZBB visibility process</li>        
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Analyst | EXL</h4>
               <h5>2021-2022</h5>
               <p><em>Gurugram </em></p>
               <ul>
