--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
               <h5>2021-2022</h5>
               <p><em>Gurugram </em></p>
               <ul>
-                <li>Created insights on fraud rate for the insurance domain of the client using Pivot Tables and Python/li>
+                <li>Created insights on fraud rate for the insurance domain of the client using Pivot Tables and Python</li>
                 <li>Predicted whether a customer will default on his loan using supervised learning</li>
               </ul>
             </div>
