--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 30 April 1999</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 30 April</li>
                   
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> 9717124912</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> New Delhi</li>
